--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,4 +1,4 @@
-name: Update README with Admin PAT
+name: Update README with Auto-Merge PR
 
 on:
   workflow_dispatch:
@@ -16,17 +16,46 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Update README.md
+      - name: Create a new branch
         run: |
+          TEMP_BRANCH="update-readme-branch-${{ github.run_id }}"
+          git checkout -b $TEMP_BRANCH
           echo "Adding random text to README.md file" >> README.md
           echo "Random text: $RANDOM" >> README.md
-          git config user.name "rohit11"
-          git config user.email "rohitnisal@gmail.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "Update README with random text"
+          git push origin $TEMP_BRANCH
 
-      - name: Push changes to branch with PAT
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          git push https://${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} ${{ github.event.inputs.branch || 'release/1.0.0' }} --force
+      - name: Create Pull Request
+        id: create_pr
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          branch: $TEMP_BRANCH
+          base: ${{ github.event.inputs.branch || 'release/1.0.0' }}
+          title: "Auto-update README with random text"
+          body: "This PR updates README.md with random text."
+          labels: auto-merge
+
+      - name: Auto-approve and merge PR
+        if: success() && steps.create_pr.outputs.pull-request-url != ''
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            const pr_number = parseInt("${{ steps.create_pr.outputs.pull-request-number }}");
+            await github.pulls.createReview({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: pr_number,
+              event: 'APPROVE',
+              body: 'Auto-approved by GitHub Actions'
+            });
+            await github.pulls.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: pr_number,
+              merge_method: 'squash'
+            });
