--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -56,6 +56,9 @@ jobs:
           sed -n '/FeatureFlagMapping = {/,/}/p' "$FEATURE_FLAG_FILE" |
             grep -E '^[[:space:]]*[^:]+[[:space:]]*:[[:space:]]*".*"' |
             sed -E 's/^[[:space:]]*([^:]+)[[:space:]]*:[[:space:]]*"([^"]+)",?/\1 : \2/' > "$UPDATED_FLAGS_FILE"
+          # Debugging output
+          echo "Extracted updated flags:"
+          cat "$UPDATED_FLAGS_FILE"
 
       - name: Merge existing and updated feature flags
         if: env.file_modified == 'true'
@@ -68,23 +71,33 @@ jobs:
           while IFS="|" read -r _ name key _; do
             name=$(echo "$name" | xargs)
             key=$(echo "$key" | xargs)
-            flag_map["$name"]="$key"
-            ordered_keys+=("$name")
+            if [[ -n "$name" && -n "$key" ]]; then
+              flag_map["$name"]="$key"
+              ordered_keys+=("$name")
+            fi
           done < "$EXISTING_FLAGS_FILE"
 
           # Read updated flags, preserving order from code, and add any new flags at the end
           while IFS=":" read -r name key; do
             name=$(echo "$name" | xargs)
             key=$(echo "$key" | xargs)
-            if [[ -z "${flag_map[$name]}" ]]; then
-              # New flag; add to map and order list
-              flag_map["$name"]="$key"
-              ordered_keys+=("$name")
-            else
-              # Existing flag; update the key if needed
-              flag_map["$name"]="$key"
+            if [[ -n "$name" && -n "$key" ]]; then
+              if [[ -z "${flag_map[$name]}" ]]; then
+                # New flag; add to map and order list
+                flag_map["$name"]="$key"
+                ordered_keys+=("$name")
+              else
+                # Existing flag; update the key if needed
+                flag_map["$name"]="$key"
+              fi
             fi
           done < "$UPDATED_FLAGS_FILE"
+
+          # Debugging output
+          echo "Final ordered flags:"
+          for name in "${ordered_keys[@]}"; do
+            echo "$name : ${flag_map[$name]}"
+          done
 
           # Generate updated table content with Count, preserving order
           echo -e "$TABLE_HEADER" > "$FEATURE_FLAGS_DOC"
