--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -16,7 +16,6 @@ jobs:
     env:
       FEATURE_FLAGS_DOC: "FEATURE_FLAGS.md"
       FEATURE_FLAG_FILE: "src/contexts/featureFlags/FeatureFlagContext.tsx"
-      EXISTING_FLAGS_FILE: "existing_flags.txt"
       UPDATED_FLAGS_FILE: "updated_flags.txt"
       TABLE_HEADER: "| Count | Feature Flag Name | Flag Key |\n|-------|-------------------|----------|"
 
@@ -33,55 +32,38 @@ jobs:
             echo "file_modified=false" >> $GITHUB_ENV
           fi
 
-      - name: Ensure FEATURE_FLAGS.md exists
+      - name: Extract feature flags from FeatureFlagMapping
         if: env.file_modified == 'true'
         run: |
-          # Create FEATURE_FLAGS.md if it does not exist
-          if [ ! -f "$FEATURE_FLAGS_DOC" ]; then
-            echo -e "$TABLE_HEADER" > "$FEATURE_FLAGS_DOC"
-          fi
+          # Extract key-value pairs from within FeatureFlagMapping, handling new lines and spaces
+          awk '/FeatureFlagMapping = {/,/} as const;/' "$FEATURE_FLAG_FILE" |
+          grep -E '^[[:space:]]*[^:]+[[:space:]]*:[[:space:]]*".*"' |
+          sed -E 's/^[[:space:]]*([^:]+)[[:space:]]*:[[:space:]]*"([^"]+)",?/\1 : \2/' > "$UPDATED_FLAGS_FILE"
+          
+          # Debugging output for verification
+          echo "Extracted key-value pairs:"
+          cat "$UPDATED_FLAGS_FILE"
 
-      - name: Extract existing feature flags from documentation
+      - name: Overwrite FEATURE_FLAGS.md with updated content
         if: env.file_modified == 'true'
         run: |
-          # Extract existing flags from the documentation file, if it exists
-          if [ -f "$FEATURE_FLAGS_DOC" ]; then
-            grep -E '^\| ' "$FEATURE_FLAGS_DOC" | tail -n +3 > "$EXISTING_FLAGS_FILE"
-          else
-            touch "$EXISTING_FLAGS_FILE"
-          fi
+          # Start with the table header
+          echo -e "$TABLE_HEADER" > "$FEATURE_FLAGS_DOC"
 
-      - name: Extract updated feature flags from FeatureFlagMapping
-        if: env.file_modified == 'true'
-        run: |
-          # Extract lines within the FeatureFlagMapping object that contain key-value pairs
-          sed -n '/FeatureFlagMapping = {/,/}/p' "$FEATURE_FLAG_FILE" |
-            grep -E '^[[:space:]]*[^:]+[[:space:]]*:[[:space:]]*".*"' |
-            sed -E 's/^[[:space:]]*([^:]+)[[:space:]]*:[[:space:]]*"([^"]+)",?/\1 : \2/' > "$UPDATED_FLAGS_FILE"
-
-      - name: Merge existing and updated feature flags
-        if: env.file_modified == 'true'
-        run: |
-          # Load existing flags into an associative array to maintain order
-          declare -A flag_map
-          while IFS="|" read -r _ name key _; do
-            flag_map["$name"]="$key"
-          done < "$EXISTING_FLAGS_FILE"
-
-          # Add new flags from the updated list, preserving sequence, and adding any new at the end
+          # Initialize count for auto-incrementing count column
           count=1
+          
+          # Append each key-value pair to the documentation file
           while IFS=":" read -r name key; do
             name=$(echo "$name" | xargs)
             key=$(echo "$key" | xargs)
-            flag_map["$name"]="$key"
+            echo "| $count | $name | $key |" >> "$FEATURE_FLAGS_DOC"
+            ((count++))
           done < "$UPDATED_FLAGS_FILE"
 
-          # Generate updated table content with auto-incrementing Count
-          echo -e "$TABLE_HEADER" > "$FEATURE_FLAGS_DOC"
-          for name in "${!flag_map[@]}"; do
-            echo "| $count | $name | ${flag_map[$name]} |" >> "$FEATURE_FLAGS_DOC"
-            ((count++))
-          done
+          # Show final content of FEATURE_FLAGS.md for debugging
+          echo "Updated FEATURE_FLAGS.md content:"
+          cat "$FEATURE_FLAGS_DOC"
 
       - name: Commit and Push Updated Documentation
         if: env.file_modified == 'true'
