--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -4,14 +4,13 @@ on:
   pull_request:
     types: [closed]
     branches:
-      - main
+      - main  # Trigger on pull request merges to the main branch
   push:
     branches:
-      - main
+      - main  # Trigger on direct commits to the main branch
 
 jobs:
   update_feature_flag_documentation:
-    if: ${{ github.event.pull_request.merged == true || github.event_name == 'push' }}
     runs-on: ubuntu-latest
     env:
       FEATURE_FLAGS_DOC: "FEATURE_FLAGS.md"
@@ -22,16 +21,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Force file_modified to true
-        run: echo "file_modified=true" >> $GITHUB_ENV
-
       - name: Extract feature flags and update documentation
-        if: env.file_modified == 'true'
         run: |
-          # Start with the table header
+          # Start with the table header in the FEATURE_FLAGS.md file
           echo -e "$TABLE_HEADER" > "$FEATURE_FLAGS_DOC"
           
-          # Initialize count for auto-incrementing count column
+          # Initialize count for the auto-incrementing count column
           count=1
 
           # Read through the FeatureFlagContext.tsx file line by line
@@ -50,15 +45,14 @@ jobs:
             fi
           done < "$FEATURE_FLAG_FILE"
 
-          # Show final content of FEATURE_FLAGS.md for debugging
+          # Display the content of FEATURE_FLAGS.md for debugging purposes
           echo "Updated FEATURE_FLAGS.md content:"
           cat "$FEATURE_FLAGS_DOC"
 
       - name: Commit and Push Updated Documentation
-        if: env.file_modified == 'true'
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add "$FEATURE_FLAGS_DOC"
-          git commit -m "Update feature flag documentation [skip ci]"
-          git push
+          git commit -m "Update feature flag documentation [skip ci]" || echo "No changes to commit"
+          git push || echo "Nothing to push"
