--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -21,33 +21,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Extract feature flags and update documentation
+      - name: Set up Node.js and install dependencies
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
         run: |
-          # Start with the table header in FEATURE_FLAGS.md
+          npm install typescript ts-node @types/node
+
+      - name: Extract Feature Flags with ts-node
+        run: |
+          # Use ts-node to extract feature flags and save to temp_flags.json
+          echo "import { FeatureFlagMapping } from './${FEATURE_FLAG_FILE}';" > extract.ts
+          echo "console.log(JSON.stringify(Object.entries(FeatureFlagMapping).map(([key, value]) => ({ key, value })), null, 2));" >> extract.ts
+          npx ts-node extract.ts > temp_flags.json
+
+      - name: Generate FEATURE_FLAGS.md
+        run: |
+          # Start with the table header
           echo -e "$TABLE_HEADER" > "$FEATURE_FLAGS_DOC"
 
-          # Initialize count for auto-incrementing count column
+          # Read the temp_flags.json file
           count=1
-
-          # Use perl to extract key-value pairs from FeatureFlagMapping
-          perl -n -e '
-            if (/export const FeatureFlagMapping = \{/) { $in_mapping = 1; next }
-            if ($in_mapping && /\}/) { $in_mapping = 0 }
-            if ($in_mapping && /\s*(\w+)\s*:\s*'\''([^'\'']+)'\''/) {
-              print "$1 : $2\n";
-            }
-          ' "$FEATURE_FLAG_FILE" > temp_flags.txt
-
-          # Append each key-value pair to the documentation file
-          while IFS=":" read -r name key; do
-            name=$(echo "$name" | xargs)  # Trim any leading/trailing spaces
-            key=$(echo "$key" | xargs)    # Trim any leading/trailing spaces
-            echo "| $count | $name | $key |" >> "$FEATURE_FLAGS_DOC"
+          jq -c '.[]' temp_flags.json | while read -r flag; do
+            name=$(echo "$flag" | jq -r .key)
+            value=$(echo "$flag" | jq -r .value)
+            echo "| $count | $name | $value |" >> "$FEATURE_FLAGS_DOC"
             ((count++))
-          done < temp_flags.txt
-
-          # Remove the temporary file
-          rm temp_flags.txt
+          done
 
           # Show final content of FEATURE_FLAGS.md for debugging
           echo "Updated FEATURE_FLAGS.md content:"
