--- a/.github/workflows/newsample.yml
+++ b/.github/workflows/newsample.yml
@@ -30,49 +30,50 @@ jobs:
       - name: Read Feature Flags from Latest Release Branch
         id: read-release-flags
         run: |
-          FILE_PATH="./src/FeatureFlags.tsx"
+          FILE_PATH="./src/contexts/featureFlags/FeatureFlagContext.tsx"
 
-          # Checkout the latest release branch and read featureFlags content
+          # Checkout the latest release branch and read FeatureFlagMapping content
           git checkout ${{ steps.get-latest-release.outputs.branch }}
           
           node -e "
             const fs = require('fs');
             const content = fs.readFileSync('$FILE_PATH', 'utf8');
-            const regex = /export const featureFlags =\\s*{([\\s\\S]+?)}/;
+            const regex = /export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/;
             const match = content.match(regex);
 
             if (!match || !match[1]) {
-              console.error('Feature flags object not found in release branch');
+              console.error('FeatureFlagMapping object not found in release branch');
               process.exit(1);
             }
 
             const objectContent = '{' + match[1].trim() + '}';
-            const featureFlags = eval('(' + objectContent + ')');
-            fs.writeFileSync(process.env.GITHUB_OUTPUT, `flags=${JSON.stringify(featureFlags)}`, { flag: 'a' });
+            const FeatureFlagMapping = eval('(' + objectContent + ')');
+            fs.writeFileSync(process.env.GITHUB_OUTPUT, `flags=${JSON.stringify(FeatureFlagMapping)}`, { flag: 'a' });
           "
+
 
       - name: Read Feature Flags from Main Branch
         id: read-main-flags
         run: |
-          FILE_PATH="./src/FeatureFlags.tsx"
+          FILE_PATH="./src/contexts/featureFlags/FeatureFlagContext.tsx"
 
-          # Checkout the main branch
+          # Checkout the main branch and read FeatureFlagMapping content
           git checkout main
           
           node -e "
             const fs = require('fs');
             const content = fs.readFileSync('$FILE_PATH', 'utf8');
-            const regex = /export const featureFlags =\\s*{([\\s\\S]+?)}/;
+            const regex = /export const FeatureFlagMapping =\\s*{([\\s\\S]+?)}/;
             const match = content.match(regex);
 
             if (!match || !match[1]) {
-              console.error('Feature flags object not found in main branch');
+              console.error('FeatureFlagMapping object not found in main branch');
               process.exit(1);
             }
 
             const objectContent = '{' + match[1].trim() + '}';
-            const featureFlags = eval('(' + objectContent + ')');
-            fs.writeFileSync(process.env.GITHUB_OUTPUT, `flags=${JSON.stringify(featureFlags)}`, { flag: 'a' });
+            const FeatureFlagMapping = eval('(' + objectContent + ')');
+            fs.writeFileSync(process.env.GITHUB_OUTPUT, `flags=${JSON.stringify(FeatureFlagMapping)}`, { flag: 'a' });
           "
 
       - name: Generate Comparison Markdown
